# sc-warcraftlogs-analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP.md  databricks.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  databricks-deploy.yml  export-data.yml  frontend-deploy.yml  publish-dashboard-data.yml
backend/: .env.example  EVAL.md  README.md  requirements.txt  run_eval.py
backend/app/: chatbot.py  config.py  db.py  main.py  schemas.py  semantic_registry.json  semantic_registry.py  sql_guard.py
backend/tests/: test_sql_guard.py
debug_exports/: pipeline_summary.csv
debug_exports/bronze/: bronze_actor_roster.csv  bronze_fight_rankings.csv  bronze_guild_members.csv  bronze_guild_reports.csv  bronze_raid_attendance.csv  bronze_report_fights.csv  bronze_zone_catalog.csv
debug_exports/gold/: dim_encounter.csv  dim_guild_member.csv  dim_player.csv  fact_player_events.csv  fact_player_fight_performance.csv  gold_best_kills.csv  gold_boss_kill_roster.csv  gold_boss_progression.csv  gold_encounter_catalog.csv  gold_guild_roster.csv  gold_player_attendance.csv  gold_player_boss_performance.csv  gold_player_performance_summary.csv  gold_player_profile.csv  gold_player_survivability.csv  gold_progression_timeline.csv  gold_raid_summary.csv  gold_raid_team.csv  gold_roster.csv  gold_weekly_activity.csv
debug_exports/silver/: silver_actor_roster.csv  silver_fight_events.csv  silver_guild_members.csv  silver_guild_reports.csv  silver_player_deaths.csv  silver_player_performance.csv  silver_player_rankings.csv  silver_raid_attendance.csv  silver_zone_catalog.csv
docs/admin/: preparation_identity_overrides.sql
docs/adr/: ADR-001-dlt-over-notebooks.md  ADR-002-static-json-export.md  ADR-003-adapter-pattern.md  README.md
docs/architecture/: adapter_guide.md  dashboard_data_publishing.md  overview.md
docs/data_contracts/: README.md  gold_entity_summary.md  preparation_identity_overrides.md
docs/data_dictionary/: README.md  _appendix.md  _preamble.md
docs/runbooks/: README.md  add-gold-table.md  blizzard-403.md  migrate-bronze-landing.md  production-deploy.md  rerun-ingestion.md  rotate-credentials.md  wcl-parse-null-backfill.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/public/: Not Found.html  index.html
frontend/src/: index.css  main.tsx  router.tsx
infra/cloudflare/: r2-cors.json
infra/clusters/: dev_cluster.yml
infra/secrets/: secret_scope_template.yml
ingestion/config/: alt_config.yml  rank_config.yml  realm_overrides.yml  source_config.yml
ingestion/jobs/: ingest_blizzard.py  ingest_google_sheets.py  ingest_primary.py  ingest_raiderio.py  ingest_wcl.py  migrate_bronze_landing_volumes.py  publish_dashboard_assets.py  trigger_publish_workflow.py
ingestion/tests/: test_ingestion.py
notebooks/: 01_explore_raw_data.py  02_data_quality_checks.py
pipeline/: consumables.py
pipeline/bronze/: blizzard.py  google_sheets.py  raiderio.py  raw_source.py  warcraftlogs.py
pipeline/contracts/: .hashes.json  data_products.yml
scripts/: bootstrap_secrets.sh  build_semantic_registry.py  check_contract_drift.py  check_contracts_ci.py  dashboard_asset_contracts.py  export_gold_tables.py  generate_data_dictionary.py  migrate_dictionary_to_contracts.py  publish_dashboard_assets.py  seed_dev_data.py  verify_setup.py
tests/: test_dashboard_asset_contracts.py
(+242 files in other folders)
